[project]
name = "xlight3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "absl-py==1.4.0",
    "eclipse-sumo==1.14.0",
    "gym==0.26.2",
    "imageio==2.31.1",
    "libsumo==1.14.0",
    "numpy==1.19.5",
    "setproctitle==1.3.2",
    "sumolib==1.14.0",
    "tensorboardx==2.6.2.2",
    "tqdm==4.66.1",
    "traci==1.14.0",
    "wandb==0.15.8",
    "torch==2.1.2",
    "torchvision==0.16.2"
]
